# usbhid_buddy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  setup.sh
docs/: CMakeLists.txt  UNIT_TESTS.md  build_doxygen.sh  doxygen_firmware.conf  doxygen_libbuddy.conf
examples/C/device_dump/: CMakeLists.txt  device_dump.c
examples/C/simple/: CMakeLists.txt  simple.c  simple.h
examples/labview/: simple.vi  simple_adc.vi  simple_dac.vi  simple_pwm.vi
examples/python/: _buddy.c  abuse_read_adc.bat  buddymodule.c  default_dac_channels.bat  get_adc_value.py  repeat_read_adc.bat  set_dac.py  set_pwm_freq.py  setup.py  simple.py  test.py  waveforms.py
fw/: Makefile  Makefile_old  daq_buddy.uvopt  daq_buddy.uvproj  flash.bat  flash.jlink
fw/bootload/: daq_buddy.uvopt  daq_buddy.uvproj
fw/code/A51/: FIFO_RD_XD.a51  FIFO_WT_XD.a51  STARTUP.A51  STARTUP_bootload.A51
fw/code/include/: C8051F380_defs.h  F3xx_USB0_Descriptor.h  F3xx_USB0_InterruptServiceRoutine.h  F3xx_USB0_Register.h  F3xx_USB0_ReportHandler.h  adc.h  counter.h  globals.h  gpio.h  i2c.h  init.h  io.h  main.h  poncho.h  process.h  pwm.h  spi.h  support.h  timers.h  tlv563x.h  uart.h  utility.h
fw/code/include/drivers/: poncho.h  tca9555.h  tlv563x.h
fw/code/source/: F3xx_USB0_Descriptor.c  F3xx_USB0_Descriptor.h  F3xx_USB0_InterruptServiceRoutine.c  F3xx_USB0_InterruptServiceRoutine.h  F3xx_USB0_ReportHandler.c  F3xx_USB0_ReportHandler.h  F3xx_USB0_Standard_Requests.c  action.c  action.h  adc.c  adc.h  counter.c  counter.h  data.c  data.h  globals.h  gpio.c  gpio.h  i2c.c  i2c.h  init.c  init.h  io.c  io.h  main.c  main.h  poncho.c  poncho.h  process.c  process.h  pwm.c  pwm.h  spi.c  spi.c.orig  spi.h  support.c  support.h  timers.c  timers.h  tlv563x.c  (+2 more)
fw/code/source/drivers/: 23lc1024.c  23lc1024.h  poncho.c  tca9555.c  tca9555.h  tlv563x.c  tlv563x.h
fw/inc/: F3xx_USB0_Descriptor.h  F3xx_USB0_InterruptServiceRoutine.h  F3xx_USB0_ReportHandler.h  adc.h  common.h  counter.h  globals.h  gpio.h  init.h  io.h  main.h  millis.h  process.h  pwm.h  spi.h  timers.h  tlv563x.h  uart.h
fw/src/: F3xx_USB0_Descriptor.c  F3xx_USB0_InterruptServiceRoutine.c  F3xx_USB0_ReportHandler.c  F3xx_USB0_Standard_Requests.c  adc.c  counter.c  gpio.c  init.c  io.c  main.c  millis.c  process.c  pwm.c  spi.c  timers.c  tlv563x.c  uart.c
fw/standard/: daq_buddy.uvopt  daq_buddy.uvproj
hw/: BOM.xlsx  CHANGELOG.txt  TODO.txt
hw/v0.1/manafacturing/: usbhid_daq-B.Cu.gbl  usbhid_daq-B.Mask.gbs  usbhid_daq-B.SilkS.gbo  usbhid_daq-Edge.Cuts.gm1  usbhid_daq-F.Cu.gtl  usbhid_daq-F.Mask.gts  usbhid_daq-F.SilkS.gto  usbhid_daq-In1.Cu(GND).g2  usbhid_daq-In2.Cu(3.3V).g3  usbhid_daq.drl
hw/v0.1/source/: mcu.sch  periph.sch  usbhid_daq.kicad_pcb  usbhid_daq.pro  usbhid_daq.sch
hw/v0.2/manafacturing/: usbhid_daq-B.Cu.gbl  usbhid_daq-B.Mask.gbs  usbhid_daq-B.SilkS.gbo  usbhid_daq-Edge.Cuts.gm1  usbhid_daq-F.Cu.gtl  usbhid_daq-F.Mask.gts  usbhid_daq-F.SilkS.gto  usbhid_daq.drl
hw/v0.2/source/: mcu.sch  periph.sch  usbhid_daq.kicad_pcb  usbhid_daq.pro  usbhid_daq.sch
hw/v0.3/manafacturing/: usbhid_daq-B.Cu.gbl  usbhid_daq-B.Mask.gbs  usbhid_daq-B.SilkS.gbo  usbhid_daq-Edge.Cuts.gm1  usbhid_daq-F.Cu.gtl  usbhid_daq-F.Mask.gts  usbhid_daq-F.SilkS.gto  usbhid_daq.drl
hw/v0.3/source/: mcu.sch  periph.sch  usbhid_daq.kicad_pcb  usbhid_daq.pro  usbhid_daq.sch
hw/v0.4/manafacturing/: usbhid_daq-B.Cu.gbl  usbhid_daq-B.Mask.gbs  usbhid_daq-B.SilkS.gbo  usbhid_daq-Edge.Cuts.gm1  usbhid_daq-F.Cu.gtl  usbhid_daq-F.Mask.gts  usbhid_daq-F.SilkS.gto  usbhid_daq-In1.Cu.g2  usbhid_daq-In2.Cu.g3  usbhid_daq.drl
hw/v0.4/source/: mcu.sch  periph.sch  usbhid_daq-cache.lib  usbhid_daq.kicad_pcb  usbhid_daq.net  usbhid_daq.pro  usbhid_daq.sch
lib/libbuddy/: CMakeLists.txt  buddy.c  buddy.h  foo.h  support.c  support.h  usbhid_buddy.c  usbhid_buddy.h  utility.c  utility.h
lib/libbuddy/bindings/: CMakeLists.txt
lib/libbuddy/bindings/labview/: README.md
lib/libbuddy/bindings/labview/buddy/: ReadMe.txt  buddy.sln  buddy.vcxproj  buddy.vcxproj.filters  dllmain.cpp  stdafx.cpp
lib/libbuddy/bindings/labview/utility_vi/: Report.html  buddy.lvlib  dir.mnu
lib/libbuddy/bindings/labview/utility_vi/Custom Controls/: dir.mnu  hid_device.ctl
lib/libbuddy/bindings/labview/utility_vi/VIs/: cleanup.vi  configure.vi  dir.mnu  flush.vi  init.vi  read adc.vi  send dac.vi  send_pwm.vi  trigger.vi
lib/libbuddy/bindings/python/: CMakeLists.txt  README.md  buddy.i  setup.py  simple.py  usbhid_buddy.i  waveforms.py
lib/libbuddy/common/: buddy_common.h  codec.c  codec.h  support.c  support.h  utility.c  utility.h
lib/libbuddy/host/: buddy.c  buddy.h
robot/: README.md
robot/hw/v0.1/assemble/: usbhid_testfixture_bom.xlsx
robot/hw/v0.1/manufacturing/: usbhid_testfixture-B.Cu.gbl  usbhid_testfixture-B.Mask.gbs  usbhid_testfixture-B.Paste.gbp  usbhid_testfixture-B.SilkS.gbo  usbhid_testfixture-Edge.Cuts.gm1  usbhid_testfixture-F.Cu.gtl  usbhid_testfixture-F.Mask.gts  usbhid_testfixture-F.Paste.gtp  usbhid_testfixture-F.SilkS.gto  usbhid_testfixture-In1.Cu.g2  usbhid_testfixture-In2.Cu.g3  usbhid_testfixture.drl
robot/hw/v0.2/manufacturing/: usbhid_testfixture-B.Cu.gbl  usbhid_testfixture-B.Mask.gbs  usbhid_testfixture-B.Paste.gbp  usbhid_testfixture-B.SilkS.gbo  usbhid_testfixture-Edge.Cuts.gm1  usbhid_testfixture-F.Cu.gtl  usbhid_testfixture-F.Mask.gts  usbhid_testfixture-F.Paste.gtp  usbhid_testfixture-F.SilkS.gto  usbhid_testfixture-In1.Cu.g2  usbhid_testfixture-In2.Cu.g3  usbhid_testfixture.drl
robot/hw/v0.2/source/: TODO.txt  actives.sch  (+8 more)
robot/sw/: adc_dynamic.robot  adc_static.robot  counter.robot  dac_dynamic.robot  dac_static.robot  pwm_duty.robot  pwm_frequency.robot  run_tests.bat
robot/sw/resources/: buddy_library.py  buddy_resources.robot  buddy_test_support.py  cmn_resources.robot  common_library.py  teensy_library.py  teensy_resources.robot
robot/teensy/usbhid_testfixture_app/: usbhid_testfixture_app.ino
tests/: CMakeLists.txt  README.md  testLibBuddy.cpp
tests/dummy_hidapi/: hid.c  hidapi.h
